tests: only build pthread_mutex tests when not compiling with MSVC
Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -82,7 +82,9 @@ AddMintomicTests(add_triangle   VAR_THREAD VAR_SIZE)
 AddMintomicTests(bitarray       VAR_THREAD VAR_SIZE DATA_SIZE=128)
 AddMintomicTests(bitarray       VAR_THREAD VAR_SIZE DATA_SIZE=32768)
 AddMintomicTests(mutex_acq_rel  VAR_THREAD VAR_SIZE ALLOW_FAIL)
-AddMintomicTests(pthread_mutex  VAR_THREAD VAR_SIZE ALLOW_FAIL)
+if (NOT MSVC)
+    AddMintomicTests(pthread_mutex  VAR_THREAD VAR_SIZE ALLOW_FAIL)
+endif()
 AddMintomicTests(storeload      DUAL_THREAD ALLOW_FAIL)
 AddMintomicTests(linkedlist     VAR_THREAD VAR_SIZE)
 configure_file(template.main.cpp generated/main.cpp)
